--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,10 @@
 ---
 // Import Stylesheet
+import { map } from 'astro/zod';
 import '../styles/global.css';
 
-
-
 // data source
-const source = '';
+const source = 'https://www.csscolorsapi.com/api/colors';
 // fetch the data
 const res = await fetch(source); 
 // store retreived data
@@ -34,8 +33,22 @@ const data = await res.json();
 			<ul class="cards">
 		  
 				<!-- Your API Data -->
+				{
+					data.colors.map( (item) => 
 
-		  
+					<li class="card-item" style={{ background: '#' + item.hex }}>
+						<a href="#">
+							<figure class="card">
+								<figcaption class="caption">
+									<h3 class="caption-title">{item.name}</h3>
+									<p>Within color group : {item.group}</p>
+								</figcaption>
+							</figure>
+						</a>
+		  			</li>
+
+		  	)
+		  }
 			</ul>
 		  </main>
 		  
