--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,97 @@
 /* Normalize CSS used */
+
+/* Base Styles */
+img {
+    display: block;
+    border: 0;
+    width: 100%;
+    height: auto;
+  }
+  
+  /* Header */
+  .masthead {
+    text-align: center;
+    border-bottom: 1px solid hsl(0, 0%, 90%);
+  }
+  
+  /* Mobile Size */
+  @media screen and (min-width: 30em) {
+    /* Gallery Layout */
+  .cards {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+  }
+  
+  .cards a {
+    display: block;
+    margin-bottom: 1rem;
+    text-decoration: none;
+  }
+  
+  /* Interaction States and Animation */
+  .caption {
+    padding: 1rem;
+    background: hsla(246, 40%, 30%, 0.6);
+    color: white;
+    font-size: 1.2rem;
+    transition: all 0.4s;
+  }
+  
+  a:focus .caption,
+  a:hover .caption {
+    background: hsla(246, 40%, 30%, 1);
+  }
+  
+  .caption-title {
+    margin: 0;
+    font-size: 1.4rem;
+    line-height: 1.1rem;
+  }
+  
+  /* Flex Box and Grid */
+  .cards {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap: 1rem;
+    }
+  
+  .cards a {
+    margin-bottom: 0;
+  }
+  
+  .card {
+    display: grid;
+  }
+  
+  .card img,
+  .caption {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  
+  .caption {
+    display: flex;
+    flex-direction: column;
+    opacity: 0;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  a:focus .caption,
+  a:hover .caption {
+    background: hsla(246, 40%, 30%, 0.6);
+    opacity: 1;
+  }
+  
+  /*  End of mobile media query  */
+  }
+  
+  /* Tablet and Above */
+  @media screen and (min-width: 60em) {
+    .cards {
+      grid-template-columns: repeat(4, 1fr);
+    }
+    
+  /*  End of Tablet Size  */
+  }
